--- a/book/listings/css/4/style.css
+++ b/book/listings/css/4/style.css
@@ -1,23 +1,3 @@
-entry.entry1 {
-  background: linear-gradient(to right, yellow, brown);
-  color: blue;
-  font-weight: bold;
-}
-
-button {
-  /* If we don't put it, the yellow background won't be visible */
-  background-image: none;
-}
-
-button.button1:hover {
-  transition: 500ms;
+button.text-button {
   color: red;
-  background-color: yellow;
-}
-
-combobox button.combo box {
-  padding: 5px;
-}
-combobox box arrow {
-  -gtk-icon-source: -gtk-icontheme('go-down-symbolic');
 }
