--- a/book/listings/css/6/style.css
+++ b/book/listings/css/6/style.css
@@ -1,6 +1,4 @@
 button.button_1:hover {
-  color: red;
-  background-color: yellow;
-  background-image: none;
-  transition: 1s;
+  color: magenta;
+  background: yellow;
 }
